--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ packages = [{ include = "standardizer" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+requests = "^2.32.3"
+python-dotenv = "^1.0.1"
 gradio = "^5.4.0"
-haystack-ai = "^2.7.0"
 loguru = "^0.7.2"
+haystack-ai = "2.6.1"
 chroma-haystack = "^1.0.0"
 langfuse-haystack = "^0.5.0"
-requests = "^2.32.3"
 notion-haystack = "^1.0.0"
-python-dotenv = "^1.0.1"
 
 [tool.poetry.scripts]
 standardizer = "standardizer.main:launch_ui"
